apps/echoandflow/wordpress-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: echoandflow
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:echoandflow.ca
    traefik.port: '80'
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.8.3-php8.1-apache
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
            - name: mysql-data
              mountPath: /mysql
        - name: redis
          image: redis:3-alpine
          imagePullPolicy: ""
          name: redis
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          ports:
            - containerPort: 6379
              name: redis    
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: echoandflow-wp
        - name: mysql-data
          persistentVolumeClaim:
            claimName: echoandflow-mysql
---
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
  namespace: echoandflow
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  creationTimestamp: null
  name: echoandflow
  namespace: echoandflow
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - echoandflow.ca
    secretName: echoandflow-ca-letsencrypt-tls
  rules:
  - host: echoandflow.ca
    http:
      paths:
      - backend:
          service:
            name: wordpress-service
            port:
              number: 80
        path: /
        pathType: Prefix
